# Codery

./: .env.example  .gitignore  .opencodeignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SETUP.md  docker-compose.yml  opencode.json
.devcontainer/: devcontainer.json
.github/workflows/: build-orchestrator.yml  build-sandbox-base.yml  deploy-apps.yml  deploy-sandbox.yml  deploy.yml.disabled  diagnose.yml  migrate.yml.disabled  release-apps.yml  release-orchestrator.yml  release-sandbox.yml  repair-host.yml  setup-host.yml  sync-routes.yml  test-apps-deploy.yml  test-sandbox-deploy.yml
containers/apps/: Dockerfile  nginx.conf  service.yml  sshd_config
containers/sandbox/: Dockerfile  Dockerfile.base  agents_file  launchy.json  opencode-global-agents.md  service.yml
docs/: customizing.md
examples/: Dockerfile.sandbox
hosting/: cloud-init.yaml  nginx.conf
hosting/examples/: aws-lightsail.md  digitalocean.md  hetzner.md
proxy/: Caddyfile.default  host-routes.json  host-setup.sh  routes.yaml  sandbox-routes.json  setup.sh
proxy/scripts/: dns-update.sh  tailscale-up.sh
system/caddy/: Caddyfile.default
system/docker-entrypoint.d/: 10-tailscale.sh  20-ssh-agent.sh  (+1 more)
system/orchestrator/: Cargo.toml
system/orchestrator/src/: caddy.rs  config.rs  daemon.rs  db.rs  deploy.rs  deploy_lock.rs  images.rs  main.rs  mcp.rs  nginx.rs  preflight.rs  service_def.rs  state.rs  tcp_proxy.rs  ui.html  ui.rs  validate.rs
system/orchestrator/ui/: index.html  package-lock.json  package.json
system/orchestrator/ui/src/: App.css  App.tsx  ContainerCard.tsx  types.ts
(+66 files in other folders)
